Reorganized to have columns per client requirement.

--- a/src/app/pages/device/device.component.html
+++ b/src/app/pages/device/device.component.html
@@ -225,8 +225,8 @@
 
               <div class="ui-g-5">
                 <span class="ui-float-label">
-                  <textarea pInputTextarea id="adogsmRemarks" formControlName="adogsmRemarks" class="form-control"></textarea>
-                  <label for="adogsmRemarks">{{ 'AdoGsm remarks' | translate }}</label>
+                  <textarea pInputTextarea id="gsmRemarks" formControlName="gsmRemarks" class="form-control"></textarea>
+                  <label for="gsmRemarks">{{ 'AdoGsm remarks' | translate }}</label>
                 </span>
               </div>
 
