User Card: added dropdowns.

--- a/src/app/@theme/styles/_overrides.scss
+++ b/src/app/@theme/styles/_overrides.scss
@@ -94,6 +94,7 @@ body .ui-dropdown {
   border-right: 0 !important;
   border-bottom: 1px solid #a9acb1ec !important;
   border-radius: 0 !important;
+  margin-top: 5px !important;
 }
 
 body .ui-dropdown .ui-inputtext {
