Fixed issue with material mode for the drop-down; border = 0 replaced with border-color = white.

--- a/src/app/@theme/styles/_overrides.scss
+++ b/src/app/@theme/styles/_overrides.scss
@@ -98,7 +98,7 @@ body .ui-dropdown {
 }
 
 body .ui-dropdown .ui-inputtext {
-  border: 0 !important;
+  border-color: white !important;
   border-radius: 0 !important;
 }
 
