--- a/src/app/pages/device/device.component.html
+++ b/src/app/pages/device/device.component.html
@@ -58,7 +58,7 @@
           <!-- FIRST COLUMN -->
             <div class="ui-g-6">
               <div class="ui-g-12"><u><b>{{ 'Customer Info' | translate }}</b></u></div>
-              <div class="ui-g-5">
+              <div class="ui-g-6">
                 <span class="ui-float-label">
                   <input pInputText id="customerId" formControlName="customerId"
                     onclick="this.setSelectionRange(0, this.value.length)" class="form-control"
@@ -67,7 +67,7 @@
                 </span>
               </div>
 
-              <div class="ui-g-5">
+              <div class="ui-g-6">
                 <span class="ui-float-label">
                   <input pInputText id="customerName" formControlName="customerName"
                     onclick="this.setSelectionRange(0, this.value.length)" class="form-control"
@@ -76,7 +76,7 @@
                 </span>
               </div>
 
-              <div class="ui-g-5">
+              <div class="ui-g-6">
                 <span class="ui-float-label">
                   <input pInputText id="regNr" formControlName="regNr"
                     onclick="this.setSelectionRange(0, this.value.length)" class="form-control"
@@ -85,7 +85,7 @@
                 </span>
               </div>
 
-              <div class="ui-g-5">
+              <div class="ui-g-6">
                 <span class="ui-float-label">
                   <input pInputText id="regNr2" formControlName="regNr2"
                     onclick="this.setSelectionRange(0, this.value.length)" class="form-control"
@@ -94,7 +94,7 @@
                 </span>
               </div>
 
-              <div class="ui-g-5">
+              <div class="ui-g-6">
                 <span class="ui-float-label">
                   <input pInputText id="address" formControlName="address"
                     onclick="this.setSelectionRange(0, this.value.length)" class="form-control"
@@ -111,7 +111,7 @@
                   <label for="addressNo">{{ 'Address number' | translate }}</label>
                 </span>
               </div>
-              <div class="ui-g-2">
+              <div class="ui-g-3">
                 <span class="ui-float-label">
                   <input pInputText id="addressNo2" formControlName="addressNo2"
                     onclick="this.setSelectionRange(0, this.value.length)" class="form-control"
@@ -120,7 +120,7 @@
                 </span>
               </div>
 
-              <div class="ui-g-5">
+              <div class="ui-g-6">
                 <span class="ui-float-label">
                   <input pInputText id="variance" formControlName="variance"
                     onclick="this.setSelectionRange(0, this.value.length)" class="form-control"
@@ -131,28 +131,28 @@
 
               <div class="ui-g-12"><u><b>{{ 'Remarks' | translate }}</b></u></div>
 
-              <div class="ui-g-5">
+              <div class="ui-g-6">
                 <span class="ui-float-label">
                   <textarea pInputTextarea id="customerRemarks" formControlName="customerRemarks" class="form-control"></textarea>
                 <label for="customerRemarks">{{ 'Customer remarks' | translate }}</label>
                 </span>
               </div>
 
-              <div class="ui-g-5">
+              <div class="ui-g-6">
                 <span class="ui-float-label">
                   <textarea pInputTextarea id="siteRemarks" formControlName="siteRemarks" class="form-control"></textarea>
                   <label for="siteRemarks">{{ 'Site remarks' | translate }}</label>
                 </span>
               </div>
 
-              <div class="ui-g-5">
+              <div class="ui-g-6">
                 <span class="ui-float-label">
                   <textarea pInputTextarea id="routeRemarks" formControlName="routeRemarks" class="form-control"></textarea>
                 <label for="routeRemarks">{{ 'Route Remarks' | translate }}</label>
                 </span>
               </div>
 
-              <div class="ui-g-5">
+              <div class="ui-g-6">
                 <span class="ui-float-label">
                   <textarea pInputTextarea id="gsmRemarks" formControlName="gsmRemarks" class="form-control"></textarea>
                   <label for="gsmRemarks">{{ 'AdoGsm remarks' | translate }}</label>
@@ -189,14 +189,12 @@
 
               <div class="ui-g-4">
                 <span class="ui-float-label">
-                  <input pInputText id="deviceId" formControlName="deviceId"
-                    onclick="this.setSelectionRange(0, this.value.length)" class="form-control"
-                    [ngClass]="{ 'is-invalid': submitted && f.deviceId.errors }" />
-                  <label for="deviceId">{{ 'Mod (A,B, C)' | translate }}</label>
-                </span>
+                  <p-dropdown [options]="modes" name="mode" style="width: 100px;"
+                    [autoDisplayFirst]="false"   editable="true" #ddModeStatus (onChange)="onModeChange($event)"
+                    formControlName="mode" optionLabel="label" ></p-dropdown>
+                    <label for="mode">{{ 'Mod (A,B, C)' | translate }}</label>
+               </span>
               </div>
-
-
               <div class="ui-g-4">
                 <span class="ui-float-label">
                   <input pInputText id="profile" formControlName="profile"
@@ -205,7 +203,6 @@
                   <label for="profile">{{ 'Profile' | translate }}</label>
                 </span>
               </div>
-
               <div class="ui-g-4">
                 <span class="ui-float-label">
                   <input pInputText id="medium" formControlName="medium"
@@ -217,10 +214,10 @@
 
               <div class="ui-g-4">
                 <span class="ui-float-label">
-                  <input pInputText id="medium" formControlName="medium"
+                  <input pInputText id="unit" formControlName="unit"
                     onclick="this.setSelectionRange(0, this.value.length)" class="form-control"
                     [ngClass]="{ 'is-invalid': submitted && f.medium.errors }" />
-                  <label for="medium">{{ 'Unit' | translate }}</label>
+                  <label for="unit">{{ 'Unit' | translate }}</label>
                 </span>
               </div>
 
